--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,6 +1,10 @@
 body {
     font-family: 'Roboto', sans-serif;
+    background-color: #fff4db;
 }
 .row {
     margin: 1.5rem 0;
+}
+#price {
+    color: #ff9900;
 }
